Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -119,8 +119,7 @@
     "import math\n",
     "\n",
     "def distance(selected_individual, neighbor):\n",
-    "   distance_squared = (neighbor['x'] - selected_individual['x'])**2 + (neighbor['y'] - selected_individual['y'])**2\n",
-    "   return math.sqrt(distance_squared)"
+    "    distance_squared = (neighbor['x'] - selected_individual['x'])**2 + (neighbor['y'] - selected_individual['y'])**2return math.sqrt(distance_squared)"
    ]
   },
   {
