--- a/index.ipynb
+++ b/index.ipynb
@@ -112,14 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
     "def distance(selected_individual, neighbor):\n",
-    "    distance_squared = (neighbor['x'] - selected_individual['x'])**2 + (neighbor['y'] - selected_individual['y'])**2return math.sqrt(distance_squared)"
+    "    distance_squared = (neighbor['x'] - selected_individual['x'])**2 + (neighbor['y'] - selected_individual['y'])**2\n",
+    "    return math.sqrt(distance_squared)"
    ]
   },
   {
